--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,22 @@
 .c-link {
   cursor: pointer;
 }
+.block-page {
+  font-size: 30px;
+  height: 300px;
+  color: #cccccc;
+  line-height: 300px;
+  text-align: center
+}
+.left-panel {
+  min-height: 100vh;
+  position: relative;
+}
+.button-group {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.no-border {
+  border-radius: 0 !important;
+}
